# haskell-holes

./: README  holes.cabal  index.html
css/: default.css
gh-pages/: Makefile  hakyll.hs  index.markdown
gh-pages/css/: default.css
gh-pages/templates/: default.html
src/Language/Haskell/: Holes.hs
